Fixed bug#13549 - Scrolling not possible for some articles on iOS Safari.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Dialog.css
@@ -79,7 +79,7 @@
 
 .Dialog > .Content {
     position: relative;
-    overflow: hidden;
+    overflow-x: auto;
 }
 
 .Dialog > .Content > .InnerContent {
