--- a/var/httpd/htdocs/skins/Agent/default/css/Core.TicketDetail.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.TicketDetail.css
@@ -270,6 +270,7 @@ div.Headline .Flag {
     -webkit-overflow-scrolling: touch;
    margin-left: 75px;
    position: relative;
+   overflow: auto;
 }
 
 #ArticleItems .Incoming .ArticleMailContentHTMLWrapper,
